--- a/index.html
+++ b/index.html
@@ -1,8 +1,30 @@
-<!doctype html>
-<html class="no-js" lang="en" dir="ltr">
-  <head>
-    <link rel="stylesheet" href="styles.css">
-  </head>
-  <body>
-  </body>
+
+<!DOCTYPE html>
+    <head>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+
+    <body>
+        <header>
+            <h1><a href="index.html">Kaitlyn Cummings</a></h1>
+        </header>
+
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="backgroundA.html">Background A</a>
+            <a href="backgroundB.html">Background B</a>
+        </nav>
+
+        <article>
+            <p>
+                Please note that this will not be the exact layout of my site. 
+                I still have many styles and art to add, this is essentially a concept map and basic layout structure.
+            </p>
+        </article>
+
+        <footer>
+            Copyright &copy; 2022 Kaitlyn Cummings<br>
+            <a href="mailto:kcummings@lcmail.lcsc.edu">Kcummings@lcmail.lcsc.edu</a>
+        </footer>
+    </body>
 </html>
