--- a/backgroundB.html
+++ b/backgroundB.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <head>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="backgroundb.css">
+    <link rel="stylesheet" href="backgroundB.css">
 </head>
 
 <body>
