--- a/backgroundB.html
+++ b/backgroundB.html
@@ -28,13 +28,13 @@
     <p>These elements will be combined with platforms the character will run on.</p>
     <div class="imageGrid">
         <div><img src="./media/vine.svg" alt="vine"></div>
-        <div><img src="./media/" alt="Small Plant"></div>
-        <div><img src="./media/" alt="Potion"></div>
-        <div><img src="./media/" alt="Mushroom"></div>
-        <div><img src="./media/" alt="Long Vines"></div>
-        <div><img src="./media/" alt="Grass"></div>
-        <div><img src="./media/" alt="Fern"></div>
-        <div><img src="./media/" alt="Fern"></div>
+        <div><img src="./media/smolPlont.svg" alt="Small Plant"></div>
+        <div><img src="./media/potion.svg" alt="Potion"></div>
+        <div><img src="./media/mushroom.svg" alt="Mushroom"></div>
+        <div><img src="./media/longVines.svg" alt="Long Vines"></div>
+        <div><img src="./media/grass.svg" alt="Grass"></div>
+        <div><img src="./media/fern.svg" alt="Fern"></div>
+        <div><img src="./media/spikeGrass.svg" alt="Spiked Grass"></div>
     </div>
 
     <footer>
