--- a/index.html
+++ b/index.html
@@ -15,12 +15,48 @@
             <a href="backgroundB.html">Background B</a>
         </nav>
 
-        <article>
-            <p>
-                Please note that this will not be the exact layout of my site. 
-                I still have many styles and art to add, this is essentially a concept map and basic layout structure.
-            </p>
-        </article>
+        <header>
+            <h1><a href="index.html">Kaitlyn Cummings</a></h1>
+        </header>
+
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="backgroundA.html">Background A</a>
+            <a href="backgroundB.html">Background B</a>
+        </nav>
+
+        <h2 class="divider">Skills</h2>
+        <div class="row">
+            <div class="item">Communication</div>
+            <div class="item">Creativity</div>
+            <div class="item">Critical Thinking</div>
+        </div>
+
+        <div class="row">
+            <div class="item">Mindfulness</div>
+            <div class="item">Problem Solving</div>
+            <div class="item">Project Management</div>
+        </div>
+
+        <h2 class="divider">Coding Skills</h2>
+        <div class="row">
+            <div class="item">CSS</div>
+            <div class="item">C++</div>
+            <div class="item">HTML</div>
+            <div class="item">JavaScript</div>
+            <div class="item">Python</div>
+        </div>
+
+        <h2 class="divider">Experience</h2>
+
+        <h2 class="divider">Education</h2>
+        <div class="row">
+            <div class="EDitem">Computer Science B.S. 2024</div>
+            <div class="EDitem">Psychology B.S. 2023</div>
+            <div class="EDitem">Communication Certification 2019</div>
+        </div>
+
+        <h2 class="divider">Leadership</h2>
 
         <footer>
             Copyright &copy; 2022 Kaitlyn Cummings<br>
