--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
-
 <!DOCTYPE html>
     <head>
         <link rel="stylesheet" href="styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Kavoon&display=swap" rel="stylesheet">
+        <title>Kaitlyn Cummings</title>
     </head>
 
     <body>
@@ -10,44 +13,55 @@
         </header>
 
         <nav>
+            
             <a href="index.html">Home</a>
-            <a href="backgroundA.html">Background A</a>
-            <a href="backgroundB.html">Background B</a>
-        </nav>
-
-        <header>
-            <h1><a href="index.html">Kaitlyn Cummings</a></h1>
-        </header>
-
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="backgroundA.html">Background A</a>
-            <a href="backgroundB.html">Background B</a>
+            <a href="resume.html">Conventional Resume</a>
+            <a href="contact.html"> Contact Me</a>
+            
         </nav>
 
         <h2 class="divider">Skills</h2>
         <div class="row">
-            <div class="item">Communication</div>
-            <div class="item">Creativity</div>
-            <div class="item">Critical Thinking</div>
-        </div>
-
-        <div class="row">
-            <div class="item">Mindfulness</div>
-            <div class="item">Problem Solving</div>
-            <div class="item">Project Management</div>
+            <div class="item">
+                <h4>Communication</h4>
+            </div>
+            <div class="item">
+                <h4>Creativity</h4>
+            </div>
+            <div class="item">
+                <h4>Critical Thinking</h4>
+            </div>
+            <div class="item">
+                <h4>Mindfulness</h4>
+            </div>
+            <div class="item">
+                <h4>Problem Solving</h4>
+            </div>
+            <div class="item">
+                <h4>Project management</h4>
+            </div>
         </div>
 
         <h2 class="divider">Coding Skills</h2>
         <div class="row">
-            <div class="item">CSS</div>
-            <div class="item">C++</div>
-            <div class="item">HTML</div>
-            <div class="item">JavaScript</div>
-            <div class="item">Python</div>
+            <div class="item">
+                <h4>CSS</h4>
+            </div>
+            <div class="item">
+                <h4>C++</h4>
+            </div>
+            <div class="item">
+                <h4>HTML</h4>
+            </div>
+            <div class="item">
+                <h4>JavaScript</h4>
+            </div>
+            <div class="item">
+                <h4>Python</h4>
+            </div>
         </div>
 
-        <h2 class="divider">Experience</h2>
+        <h2 class="divider">Projects</h2>
 
         <h2 class="divider">Education</h2>
         <div class="row">
