--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
             
             <a href="index.html">Home</a>
-            <a href="resume.html">Conventional Resume</a>
+            <a href="resume.html">Resume</a>
             <a href="contact.html"> Contact Me</a>
             
         </nav>
