--- a/resume.html
+++ b/resume.html
@@ -21,7 +21,7 @@
         </nav>
 
         <div class="download">
-            <a download href="./media/kcummings_Resume.pdf">
+            <a href="./media/kcummings_Resume.pdf" download="Kaitlyn_Cummings">
                 download
             </a>
         </div>
