--- a/index.html
+++ b/index.html
@@ -42,7 +42,21 @@
             </div>
         </div>
 
+        <h2 class="divider">Projects</h2>
+            <div class="row">
+                <div class="project">
+                    <h5><a href="https://github.com/kaitlyncummings/tarantulawebsite.git">Tarantula Website</a></h5>
+                </div>
+                <div class="project">
+                    <h5><a href="https://github.com/kaitlyncummings/Beans.git">Bean's Website</a></h5>
+                </div>
+                <div class="project">
+                    <h5><a href="https://github.com/kaitlyncummings/onewingfarm.git">One Wing Farm Website</a></h5>
+                </div>
+            </div>
+
         <h2 class="divider">Coding Skills</h2>
+
         <div class="row">
             <div class="item">
                 <h4>CSS</h4>
@@ -61,16 +75,12 @@
             </div>
         </div>
 
-        <h2 class="divider">Projects</h2>
-
         <h2 class="divider">Education</h2>
         <div class="row">
-            <div class="EDitem">Computer Science B.S. 2024</div>
-            <div class="EDitem">Psychology B.S. 2023</div>
-            <div class="EDitem">Communication Certification 2019</div>
+            <h5 class="project">Computer Science B.S. 2024</h5>
+            <h5 class="project">Psychology B.S. 2023</h5>
+            <h5 class="project">Communication Certification 2019</h5>
         </div>
-
-        <h2 class="divider">Leadership</h2>
 
         <footer>
             Copyright &copy; 2022 Kaitlyn Cummings<br>
