--- a/resume.html
+++ b/resume.html
@@ -22,10 +22,13 @@
 
         <div class="download">
             <a href="./media/kcummings_Resume.pdf" download="Kaitlyn_Cummings">
-                download
+                <button type="button"> Download </button>
             </a>
         </div>
 
+        <p class="back">
+            <img class= "resume" src="./media/kcummings_Resume.pdf" alt="Kaitlyn Cummings Resume">
+        </p>
 
         <footer>
             Copyright &copy; 2022 Kaitlyn Cummings<br>
