--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             
         </nav>
 
-        <h2 class="divider">Skills</h2>
+        <h2>Skills</h2>
+
         <div class="row">
             <div class="item">
                 <h4>Communication</h4>
@@ -32,9 +33,6 @@
                 <h4>Critical Thinking</h4>
             </div>
             <div class="item">
-                <h4>Mindfulness</h4>
-            </div>
-            <div class="item">
                 <h4>Problem Solving</h4>
             </div>
             <div class="item">
@@ -42,20 +40,21 @@
             </div>
         </div>
 
-        <h2 class="divider">Projects</h2>
-            <div class="row">
-                <div class="project">
-                    <h5><a href="https://github.com/kaitlyncummings/tarantulawebsite.git">Tarantula Website</a></h5>
-                </div>
-                <div class="project">
-                    <h5><a href="https://github.com/kaitlyncummings/Beans.git">Bean's Website</a></h5>
-                </div>
-                <div class="project">
-                    <h5><a href="https://github.com/kaitlyncummings/onewingfarm.git">One Wing Farm Website</a></h5>
-                </div>
-            </div>
+        <h2>Projects</h2>
 
-        <h2 class="divider">Coding Skills</h2>
+        <div class="row">
+            <div class="project">
+                <h5><a href="https://github.com/kaitlyncummings/tarantulawebsite.git">Tarantula Website</a></h5>
+            </div>
+            <div class="project">
+                <h5><a href="https://github.com/kaitlyncummings/Beans.git">Bean's Website</a></h5>
+            </div>
+            <div class="project">
+                <h5><a href="https://github.com/kaitlyncummings/onewingfarm.git">One Wing Farm Website</a></h5>
+            </div>
+        </div>
+
+        <h2>Coding Skills</h2>
 
         <div class="row">
             <div class="item">
@@ -75,11 +74,22 @@
             </div>
         </div>
 
-        <h2 class="divider">Education</h2>
+        <h2>Education</h2>
+
         <div class="row">
             <h5 class="project">Computer Science B.S. 2024</h5>
             <h5 class="project">Psychology B.S. 2023</h5>
             <h5 class="project">Communication Certification 2019</h5>
+        </div>
+
+        <h2>Professional Profiles</h2>
+        <div class="row">
+            <div class="item">
+                <a href="https://github.com/kaitlyncummings">GitHub</a>
+            </div>
+            <div class="item">   
+                <a href="https://app.joinhandshake.com/stu/users/25329643">Handshake</a>
+            </div>
         </div>
 
         <footer>
