--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en">
     <head>
         <link rel="stylesheet" href="styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -44,13 +45,13 @@
 
         <div class="row">
             <div class="project">
-                <h5><a href="https://github.com/kaitlyncummings/tarantulawebsite.git">Tarantula Website</a></h5>
+                <h5><a href="https://kaitlyncummings.github.io/tarantulawebsite/">Tarantula Website</a></h5>
             </div>
             <div class="project">
-                <h5><a href="https://github.com/kaitlyncummings/Beans.git">Bean's Website</a></h5>
+                <h5><a href="https://kaitlyncummings.github.io/Beans/">Bean's Website</a></h5>
             </div>
             <div class="project">
-                <h5><a href="https://github.com/kaitlyncummings/onewingfarm.git">One Wing Farm Website</a></h5>
+                <h5><a href=https://kaitlyncummings.github.io/onewingfarm/index.html>One Wing Farm Website</a></h5>
             </div>
         </div>
 
@@ -94,7 +95,7 @@
 
         <footer>
             Copyright &copy; 2022 Kaitlyn Cummings<br>
-            <a href="mailto:kcummings@lcmail.lcsc.edu">Kcummings@lcmail.lcsc.edu</a>
+            <a href="mailto:kcummings@lcmail.lcsc.edu">kcummings@lcmail.lcsc.edu</a>
         </footer>
     </body>
 </html>
