--- a/resume.html
+++ b/resume.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en">
     <head>
         <link rel="stylesheet" href="styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -33,7 +34,7 @@
         
         <footer>
             Copyright &copy; 2022 Kaitlyn Cummings<br>
-            <a href="mailto:kcummings@lcmail.lcsc.edu">Kcummings@lcmail.lcsc.edu</a>
+            <a href="mailto:kcummings@lcmail.lcsc.edu">kcummings@lcmail.lcsc.edu</a>
         </footer>
     </body>
 </html>
