--- a/resume.html
+++ b/resume.html
@@ -23,9 +23,9 @@
 
        
 
-        <article class="back">
+        <div class="back">
             <img class= "resume" src="./media/kcummings_Resume.pdf" alt="Kaitlyn Cummings Resume">
-        </article>
+        </div>
 
 
         <a href="./media/kcummings_Resume.pdf" download="Kaitlyn_Cummings">
